# backend/src/main/java/com/example/ExampleController.java
@@ -12,6 +12,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import com.example.openapi.generated.api.*;
 import com.example.openapi.generated.model.ItemInfo;
+import com.example.openapi.generated.model.LoginCredentials;
+import com.example.openapi.generated.model.Order;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.ObjectReader;
 import com.mongodb.MongoCommandException;
@@ -22,6 +24,8 @@ import com.mongodb.client.MongoClients;
 import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoDatabase;
 
+import jakarta.validation.Valid;
+
 @Controller
 public class ExampleController implements StoreApi {
 
@@ -30,7 +34,7 @@ public class ExampleController implements StoreApi {
     private MongoCollection items, credentials;
 
     ExampleController() throws Exception {
-        MongoClient client = MongoClients.create("mongodb://mongo");
+        MongoClient client = MongoClients.create("mongodb://localhost");
         session = client.startSession();
         db = client.getDatabase("local");
         createDB();
@@ -43,7 +47,7 @@ public class ExampleController implements StoreApi {
             items = db.getCollection("items");
             credentials = db.getCollection("credentials");
             BufferedInputStream stream = new BufferedInputStream(
-                    new FileInputStream("items.json"));
+                    new FileInputStream("backend/src/main/resources/items.json"));
             ObjectReader js = new ObjectMapper().readerFor(Document.class);
             ArrayList<Document> ls = new ArrayList<>();
             Document[] arr = js.readValues(js.createParser(stream), Document[].class).next();
@@ -51,6 +55,16 @@ public class ExampleController implements StoreApi {
                 ls.add(element);
             }
             items.insertMany(session, ls);
+            stream.close();
+            stream = new BufferedInputStream(
+                    new FileInputStream("backend/src/main/resources/credentials.json"));
+            js = new ObjectMapper().readerFor(Document.class);
+            ls = new ArrayList<>();
+            arr = js.readValues(js.createParser(stream), Document[].class).next();
+            for (Document element : arr) {
+                ls.add(element);
+            }
+            credentials.insertMany(session, ls);
             stream.close();
         } catch (Exception e) {
             if (e.getClass().getName().equals(MongoCommandException.class.getName())) {
@@ -77,6 +91,27 @@ public class ExampleController implements StoreApi {
         res.setId(doc.getInteger("id"));
         res.setName(doc.getString("name"));
         res.setPrice(new BigDecimal(doc.getDouble("price")));
-        return new ResponseEntity<ItemInfo>(res,HttpStatus.OK);
+        return new ResponseEntity<ItemInfo>(res, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<BigDecimal> calcOrder(@Valid Order order) {
+        ArrayList<BigDecimal> list = (ArrayList<BigDecimal>) order.getPrices();
+        BigDecimal total = BigDecimal.ZERO;
+        for (BigDecimal item : list) {
+            total = total.add(item);
+        }
+        return new ResponseEntity<BigDecimal>(total, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> authLogin(@Valid LoginCredentials loginCredentials) {
+        // TODO Auto-generated method stub
+        if(credentials.aggregate(session, Arrays.asList(new Document("$match",new Document("user", "1").append("password", "1")))) != null){
+            return new ResponseEntity<Void>(HttpStatus.OK);
+        }
+        else{
+            return new ResponseEntity<>(HttpStatus.FORBIDDEN);
+        }
     }
 }
